# gtest2

./: CMakeLists.txt
app/: myfunc.c
tests/: squares_test.h
